kibana/service.yaml
#
# Creates a Kibana service - see the notes in the Elastic version of this file
#

kind: Service
apiVersion: v1
metadata:
  name: kibana-svc
spec:
  selector:
    app: kibana
  ports:
    - protocol: "TCP"
      port: 5601
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.15.0
          volumeMounts:
          - mountPath: /usr/share/kibana/config/certs
            name: ssl-cert
            readOnly: true
          ports:
            - containerPort: 5601
              name: kibana
      volumes:
        - name: ssl-cert
          secret:
            secretName: kibana-svc-internal-cert
