kibana/ingress.yaml
#
# Expose Kibana over port 80 on the URL http://elastic.local
#
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana-route
spec:
  parentRefs:
  - name: http-gateway
    namespace: apigateway
  hostnames:
  - elastic.local
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: kibana-svc
      kind: Service
      port: 5601
